# adb-compass

./: .gitignore  README.md  build-all.sh  index.html  package.json
.github/workflows/: build-release.yml
docs/: APPLICATION_FEATURES.md  DESIGN.md  FEATURES.md  LANDING_PAGE_PROMPT.md
landing/: index.html  pnpm-lock.yaml  tailwind.config.ts
landing/docs/: COMPETITOR_ANALYSIS.md
landing/src/: App.tsx  index.css
landing/src/components/common/: AndroidCursor.tsx  GradientText.tsx
landing/src/components/layout/: Container.tsx  Footer.tsx  Navigation.tsx
landing/src/pages/: Index.tsx
src/: App.tsx  translations.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/adb/: agent_manager.rs  client.rs
src-tauri/src/commands/: screen_capture.rs
src/components/: ActionRequirementsChecklist.tsx  ApkDropzone.tsx  ApkManager.tsx  DeviceDetailView.tsx  DeviceList.tsx  InstallButton.tsx  LogcatView.tsx  MultiScreenView.tsx  RequirementChecklist.tsx  Settings.tsx  StatusBar.tsx  TerminalView.tsx
src/components/device/: DeviceOverview.tsx  FileManager.tsx  QuickActionMenu.tsx  ScreenCapture.tsx  StreamPlayer.tsx
src/components/modals/: AiLogAnalysisModal.tsx  DeviceInfoModal.tsx  FileTransferModal.tsx  InputTextModal.tsx  ManualConnectModal.tsx  MirrorWindow.tsx  RebootModal.tsx  UninstallModal.tsx  WirelessConnectModal.tsx
src/contexts/: DeviceContext.tsx
src/hooks/: useApk.ts
src/styles/: tokens.css
src/types/: index.ts
src/utils/: aiService.ts  tauri.ts
(+7 files in other folders)
