[package]
name = "devicehub"
version = "2.0.0"
description = "DeviceHub"
authors = ["hoangnv170752"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wait-timeout = "0.2.1"
chrono = "0.4"
dirs = "5"
lazy_static = "1.4"
openh264 = "0.6"
image = "0.25"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }


